--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,4 +1,5 @@
-Options +FollowSymLinks -Indexes
+#Options +FollowSymLinks -Indexes
+Options +FollowSymLinks -MultiViews
 RewriteEngine On
 
 RewriteCond %{HTTP:Authorization} .
